# airflow-exporter

./: .dockerignore  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test-airflow  LICENSE  README.md  airflow-requirements.txt  docker-compose.test.yml  docker-compose.yml  prometheus_exporter.py  pyproject.toml  requirements.txt  run_test.sh  setup.py
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/workflows/: publish.yml  test-2.yml  test-3.yml  test.yml
airflow_exporter/: __init__.py  config.yaml  prometheus_exporter.py  xcom_config.py
db/: store.py
example/airflow-exporter-python3/: docker-compose.yml
example/airflow-exporter-python3/airflow/dags/: ff_dag.py
example/airflow-exporter-python3/postgresql/docker-entrypoint-initdb.d/: init.sql
prometheus_exporter/: prometheus_exporter.py
prometheus_exporter/db/: store.py
tests/: .gitignore  Dockerfile.tests  airflow.cfg  docker-compose.yml  env-common.sh  env-mysql-5.7.sh  env-mysql-8.0.sh  env-postgres-12.0.sh  env-postgres-9.6.sh  test_metrics_rbac_up.sh  test_metrics_up.py  test_metrics_up.sh
tests/airflow1.10-rbac-py3/: docker-compose.yml
tests/airflow1.8-py2/: docker-compose.yml
tests/airflow1.8-py2/postgresql/docker-entrypoint-initdb.d/: init.sql
tests/airflow1.9-py3/: docker-compose.yml
tests/dags/: dummy_dag.py  slow_dag.py
